2025-05-26  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/adsorption_guo2020.C: New model.
	* src/daisy/chemicals/awi.C (Costanza2008x): New model.

2025-05-25  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/adsorption_Python.C (area_AWI): New parameter.
	* src/daisy/chemicals/adsorption_linear.C (K_AWI): New parameter.
	* src/daisy/column_std.C (awi): New parameter.
	* all: Update.

2025-05-23  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/awi.C: New component.

2025-05-21  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/bioclimate_std.C
	(deposition): Made it a list.

	* src/daisy/upper_boundary/weather/deposition.C
	(DepositionGundersen): Delete model.
	(const): New model.

2025-05-19  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/adsorption_Python.C (extra): New parameter.

2025-04-25  Per Abrahamsen  <pa@plen.ku.dk>

	* CMakeLists.txt (VERSION): 7.0.9.

	* src/daisy/chemicals/denprod_Parton1996.C (split): Use M, not
	C. Thanks Tobias Kloffel.

2025-03-17  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/column_std.C (OrganicMatter): Make 'SOM2025' default.
	* src/daisy/organic_matter/organic_std.C (SOM2000, SOM2025): New
	parameterization.
	(default): Don't give 'smb' a default value.
	* src/daisy/organic_matter/bioincorporation.C (respiration): Set
	to zero by default.

2025-03-11  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/organic_matter/dom.C: Use rate.

	* lib/fertilizer.dai (slurry): Use Rate.
	* lib/chemistry-base.dai (solid, classic, Tracer, colloid): Ditto.
	* lib/chemistry.dai: Ditto.

2025-03-10  Per Abrahamsen  <pa@plen.ku.dk>

	* lib/log-std.dai ("Field chemical", "Field nitrogen"):
	* lib/log.dai ("Surface Chemicals"): Renamed 'litter_decomposed
	and 'surface_decomposed'.
	* src/daisy/chemicals/chemical_std.C: Ditto.
	(M_secondary): Removed duplicate definition.
	* src/daisy/soil/hydraulic_B_C_inverse.C (Theta_sat): Ditto.

2025-03-07  Per Abrahamsen  <pa@plen.ku.dk>
