@@ -73,8 +73,8 @@ struct ReactionSorption : public Reaction
   // Simulation.
   void tick_soil (const Geometry&,
                   const Soil& soil, const SoilWater& soil_water, 
-                  const SoilHeat&, const AWI&,
-                  const OrganicMatter&, Chemistry& chemistry,
+		  const SoilHeat&, const AWI&,
+		  OrganicMatter&, Chemistry& chemistry,
 		  const double /* dt */, Treelog& msg)
   { 
     TREELOG_MODEL (msg);
